--- a/src/task_1.html
+++ b/src/task_1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
+    <title>Задание 1 - переключатель цветов</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -16,10 +17,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="./task_1.html">Задание 1 - переключатель цветов</a></li>
-      <li><a href="./task_2.html">Задание 2 - таймер обратного отсчета</a></li>
-      <li><a href="./task_3.html">Задание 3 - промисификация функций</a></li>
+      <li><a class="link-position" href="./index.html">вернуться назад</a></li>
     </ul>
-    <script src="./js/index.js"></script>
+    <button type="button" data-start class="start-btn">Start</button>
+    <button type="button" data-stop class="stop-btn">Stop</button>
+    <script src="./js/task_1.js"></script>
   </body>
 </html>
