--- a/src/task_3.html
+++ b/src/task_3.html
@@ -19,6 +19,8 @@
     <ul>
       <li><a class="link-position" href="./index.html">вернуться назад</a></li>
     </ul>
+    <p class="task">Task 3.1</p>
+    <ul class="markup-task"></ul>
     <script src="./js/task_3.js"></script>
   </body>
 </html>
